# unredact

./: .gitignore  Makefile  README.md  pyproject.toml
docs/plans/: 2026-02-15-constraint-solver-design.md  2026-02-15-constraint-solver-impl.md  2026-02-15-stage1-font-overlay.md  2026-02-15-unredact-design.md  2026-02-16-email-unredaction-design.md  2026-02-16-interactive-redaction-ui-impl.md  2026-02-16-spot-redaction-design.md  2026-02-16-spot-redaction-impl.md  2026-02-17-frontend-modularization-design.md  2026-02-17-frontend-modularization-impl.md  2026-02-17-pipeline-refactor-design.md  2026-02-17-pipeline-refactor-impl.md  2026-02-17-pixel-alignment-design.md  2026-02-17-pixel-font-detection-design.md  2026-02-18-dictionary-full-name-design.md  2026-02-18-glyph-equivalence-classes-impl.md  2026-02-20-font-debug-design.md  2026-02-20-font-debug-impl.md  2026-02-20-redaction-approval-impl.md  2026-02-20-redaction-workflow-redesign-design.md  2026-02-20-redaction-workflow-redesign-impl.md  2026-02-21-mobile-friendly-design.md  2026-02-21-mobile-friendly-impl.md  (+7 more)
scripts/: build_emails.py
solver_rs/: Cargo.toml
solver_rs/src/: dfs.rs  (+3 more)
tests/: conftest.py  test_alignment.py  test_analyze_page.py  test_app.py  test_detect_redactions.py  test_e2e.py  test_font_debug.py  test_font_masking.py  test_full_name_dictionary.py  test_guided_detect.py  test_llm_detect.py  test_llm_validate.py  test_name_dictionary.py  test_ocr.py  test_overlay.py  test_pixel_full_search.py  test_pixel_scoring.py  test_solver.py  test_word_lists.py  test_word_solve.py
unredact/: app.py
(+24 files in other folders)
